# rag-eval-platform

./: .gitignore  README.md  launch-frontend.sh  launch-full-stack.sh  launch.sh
agen-sme-eval-be/: ENHANCED_LOGGING.md  README.md  app.py  env.example  main.py  pyproject.toml  requirements.txt  start.sh
agen-sme-eval-be/.cursor/rules/: python.mdc
agen-sme-eval-be/agents_config/: __init__.py  accuracy_agent.yaml  authoritativeness_agent.yaml  hallucination_agent.yaml  usefulness_agent.yaml
agen-sme-eval-be/examples/: api_usage_examples.py  selective_metrics_examples.md
agen-sme-eval-be/src/: __init__.py  agent_config_loader.py  agents.py  api.py  config.py  logging_utils.py  models.py  orchestrator_factory.py  proxy_client.py
agen-sme-eval-ui-react/: README.md  package-lock.json  package.json  tailwind.config.js
agen-sme-eval-ui-react/src/: App.tsx  index.css
agen-sme-eval-ui-react/src/components/: EvaluationForm.tsx  Header.tsx  LoadingSpinner.tsx  ResultsDisplay.tsx  SystemStatus.tsx
agen-sme-eval-ui-react/src/services/: api.ts
agen-sme-eval-ui-react/src/types/: evaluation.ts
